improved ui, added rounded corners, darkened hero unit, added about page and contact page, need to add more to those, added enter button submission, TODO: when message has line breaks the server is unable to parse the Json object. Need to fix this.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,7 +7,7 @@
    Author's custom styles
    ========================================================================== */
 body {
-    background: url('../img/bg1.png') no-repeat center center fixed; /* Url = 'http://fc05.deviantart.net/fs41/f/2009/054/c/a/__D_r_i_n_k_U_p___by_MoscaDeMantequilla.png'*/
+    background: url('../img/bg-edit1.png') no-repeat center center fixed; /* Url = 'http://fc05.deviantart.net/fs41/f/2009/054/c/a/__D_r_i_n_k_U_p___by_MoscaDeMantequilla.png'*/
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
